# searchEngine

./: .gitignore  CMakeLists.txt  config.json  converter.h  main.cpp
.run/: sample_test_case.sample_test.run.xml
include/: converter.h  invertedIndex.h  searchServer.h  update.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt
src/: converter.h  converterJSON.h  invertedIndex.cpp  main.cpp  searchServer.cpp
unitTests/: CMakeLists.txt
unit_tests/: CMakeLists.txt  main.cpp  main_test.cpp
